Kezdeti javítások